# auctionflow

./: .env.example  .gitignore  API_VERSIONING.md  AUCTIONFLOW_API_SPEC.md  AUCTIONFLOW_API_SPECIFICATION.md  BACKUP_README.md  COMPREHENSIVE_API_SPEC.md  COMPREHENSIVE_API_SPECIFICATION.md  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  DISASTER_RECOVERY_RUNBOOK.md  INTEGRATION_SUMMARY.md  KIBANA_DASHBOARDS.md  LICENSE  PRODUCT_SPECIFICATION.md  PROJECT_STRUCTURE.md  QUICK_REFERENCE.md  README.md  RECENT_CHANGES.md  SECURITY.md  UI_SPEC_PROGRESS.json  WEBSOCKET_FIX.md  build-and-run.sh  build-deploy-run.sh  build.gradle  canary-rollout.sh  cleanup-and-commit.sh  commit-changes.sh  deploy.sh  docker-compose.minimal.yml  docker-compose.yml  docker-compose.yml.broken  filebeat.yml  gradlew  prometheus.yml  quick-update.sh  rebuild-and-restart.sh  rollback.sh  settings.gradle  setup-and-commit.sh  (+6 more)
auction-analytics/: Dockerfile  build.gradle
auction-api/: Dockerfile  build.gradle
auction-bidding-strategies/: build.gradle
auction-common/: build.gradle
auction-events/: Dockerfile  build.gradle
auction-notifications/: Dockerfile  build.gradle
auction-payments/: Dockerfile  build.gradle
auction-tests/: build.gradle
auction-timers/: Dockerfile  build.gradle
auctionflow-ui/: Dockerfile  nginx.conf  package-lock.json  package.json  replit.md  tailwind.config.ts  vite.config.ts
config/: README.md
docs/: API-Reference.md  Capacity-Planning.md  Deployment-Guide.md  (+7 more)
sdks/python/: pyproject.toml
sdks/python/src/auctionflow_sdk/: __init__.py  client.py  models.py
(+580 files in other folders)
