[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "auctionflow-sdk"
version = "1.0.0"
description = "Auction Flow API Client SDK"
dependencies = [
    "requests>=2.28.0",
    "urllib3>=1.26.0",
    "pydantic>=2.0.0"
]
requires-python = ">=3.8"

[tool.setuptools.packages.find]
where = ["src"]